fix: vertical align top table cells

--- a/web/themes/custom/julkaisut/assets/styles/gutenberg/blocks/table.scss
+++ b/web/themes/custom/julkaisut/assets/styles/gutenberg/blocks/table.scss
@@ -36,6 +36,7 @@
   td,
   th {
     padding: var(--spacing-xs);
+    vertical-align: top;
   }
 
   .tablesaw-advance .tablesaw-btn.btn-micro {
